# monovision

./: .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  SESSION_STATUS.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: PRD.md
src/monovision/: __init__.py  __main__.py  core.py  utils.py
tests/: test_core.py  test_utils.py
