[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monovision"
version = "0.1.0"
description = "A Seinfeld-grade sample project. Renders only when one viewport is unavailable."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]
